accessible/ipc/other/DocAccessibleChild.cpp
@@ -316,13 +316,30 @@ mozilla::ipc::IPCResult DocAccessibleChild::RecvSelectionCount(
 mozilla::ipc::IPCResult DocAccessibleChild::RecvTextSubstring(
     const uint64_t& aID, const int32_t& aStartOffset, const int32_t& aEndOffset,
     nsString* aText, bool* aValid) {
-  HyperTextAccessible* acc = IdToHyperTextAccessible(aID);
+  Accessible* acc = IdToAccessible(aID);
   if (!acc) {
     return IPC_OK();
   }
 
-  *aValid = acc->IsValidRange(aStartOffset, aEndOffset);
-  acc->TextSubstring(aStartOffset, aEndOffset, *aText);
+  TextLeafAccessible* leaf = acc->AsTextLeaf();
+  if (leaf) {
+    if (aStartOffset != 0 || aEndOffset != -1) {
+      // We don't support fetching partial text from a leaf.
+      *aValid = false;
+      return IPC_OK();
+    }
+    *aValid = true;
+    *aText = leaf->Text();
+    return IPC_OK();
+  }
+
+  HyperTextAccessible* hyper = acc->AsHyperText();
+  if (!hyper) {
+    return IPC_OK();
+  }
+
+  *aValid = hyper->IsValidRange(aStartOffset, aEndOffset);
+  hyper->TextSubstring(aStartOffset, aEndOffset, *aText);
   return IPC_OK();
 }
 
